# scicat_widget

./: .gitignore  .pre-commit-config.yaml  .prettierignore  SECURITY.md  dataset_widget.ipynb  eslint.config.mjs  example.ipynb  justfile  package-lock.json  package.json  playwright.config.ts  pyproject.toml  stylelint.config.mjs  upload-widget.ipynb
.github/workflows/: base-test.yml  ci.yml  release.yml  test.yml  ui-test.yml
examples/: data.csv  upload_with_initial_data.ipynb
js/: assets.ts  attachmentsWidget.ts  comm.ts  config.ts  datasetUploadWidget.css  datasetUploadWidget.ts  datasetWidget.ts  dataset_widget.css  dataset_widget.ts  fieldAutomation.ts  filesWidget.ts  forms.ts  inputConstruction.ts  inputWidgets.ts  models.ts  oldStyle.css  owners.ts  search_dropdown.css  search_dropdown.ts  style.ts  tabs.ts  validation.ts  widgets.ts
js/assets/: datasetUploadWidget.css  declarations.d.ts  fieldInfos.json  index.ts  widget-fragment.html
js/components/: button.ts  dialog.ts  icon.ts  index.ts  labIcon.ts  links.ts  output.ts  tabs.ts  upload.ts
js/components/input/: attachmentInput.ts  comboboxInput.ts  comboboxManualInput.ts  datetimeInput.ts  fileInput.ts  index.ts  inputComponent.ts  multiAttachmentInput.ts  multiFileInput.ts  multiInput.ts  multiTextInput.ts  peopleInput.ts  radioInput.ts  scientificMetadataInput.ts  techniquesInput.ts  textInput.ts
js/forms/: attachments.ts  datasetOverview.ts  files.ts  index.ts  metadataOverview.ts  signIn.ts  util.ts
js/inputWidgets/: checkboxInputWidget.ts  choiseInputWidget.ts  comboboxInputWidget.ts  datetimeInputWidget.ts  dropdownInputWidget.ts  fileInputWidget.ts  inputWidget.ts  ownersInputWidget.ts  personInputWidget.ts  principalInvestigatorInputWidget.ts  relationshipsInputWidget.ts  scientificMetadataInputWidget.ts  stringInputWidget.ts  stringListInputWidget.ts  techniquesInputWidget.ts
js/widgets/: button.ts  checkboxInputWidget.ts  datetimeInputWidget.ts  dialog.ts  dropdownInputWidget.ts  forms.ts  iconButton.ts  inputWidget.ts  output.ts  ownersInputWidget.ts  stringInputWidget.ts  upload.ts
src/scicat_widget/: __init__.py  _comm.py  _filesystem.py  _logging.py  _model.py  _scicat_api.py  _serialization.py  _upload.py  _widgets.py
tests/components/: comboboxInput.spec.ts  comboboxManualInput.spec.ts  radioInput.spec.ts  testInput.spec.ts  textInput.spec.ts  util.ts
tests/components/fixture/: index.html  mount.ts
tests/e2e/: dataset-upload-widget.spec.ts
tests/e2e/assets/: dataset_upload_widget_initial_data.ipynb
tests/e2e/notebooks/: dataset_upload_widget_initial_data.ipynb
tests/jupyter/: dataset-upload-widget.spec.ts  jupyter_server_test_config.py  multiAttachmentInput.spec.ts  multiFileInput.spec.ts
tests/jupyter/assets/: data.csv  dataset_upload_widget.ipynb  dataset_upload_widget_initial_data.ipynb  dataset_upload_widget_minimal.ipynb
tests/python/: dataset_upload_widget_test.py
ui-tests/: dataset-upload-widget.spec.ts
ui-tests/notebooks/: dataset_upload_widget.ipynb
