[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scicat_widget"
dynamic = ["version"]
readme = "README.md"
description = "SciCat dataset widget"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.21",
    "ipykernel>=6.30.1",
    "jupyter-host-file-picker>=26.2.1",
    "pydantic>=2.12",
    "scitacean>=26.2.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    "anywidget[dev]>=0.9.21",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.5.0",
    "mypy>=1.17",
    "ruff>=0.14",
    "watchfiles>=1.1"
]
test = [
    "pytest>=9",
]

[project.urls]
# "Documentation" = "https://scicatproject.github.io/scitacean"
"Bug Tracker" = "https://github.com/jl-wynen/scicat_widget/issues"
"Source" = "https://github.com/jl-wynen/scicat_widget"

[tool.hatch.build]
only-packages = true
artifacts = ["src/scicat_widget/_static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/scicat_widget/_static/datasetUploadWidget.js"]
skip-if-exists = ["src/scicat_widget/_static/datasetUploadWidget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "tests"
addopts = """
--strict-config
--strict-markers
-ra
-v
"""
filterwarnings = [
    "error",
]

[tool.mypy]
plugins = "pydantic.mypy"
mypy_path = "src"
exclude = ["docs/conf.py", "venv", ".venv"]
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
show_error_codes = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = [".*", "__pycache__", "build", "dist", "venv"]

[tool.ruff.lint]
select = ["B", "C4", "D", "DTZ", "E", "F", "G", "I", "FBT003", "FURB", "PERF", "PGH", "PT", "PYI", "RUF", "S", "T20", "UP", "W"]
ignore = [
    "D105", # most magic methods don't need docstrings as their purpose is always the same
    "E741", "E742", "E743", # do not use names ‘l’, ‘O’, or ‘I’; they are not a problem with a proper font
    # Conflict with ruff format, see
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", "COM819", "D206", "D300", "E111", "E114", "E117", "ISC001", "ISC002", "Q000", "Q001", "Q002", "Q003", "W191",
]
fixable = ["B010", "I001", "PT001", "RUF022"]
isort.known-first-party = ["scicat_widget"]
pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # asserts are fine in tests
    "D10", # no docstrings required in tests
]
"docs/*" = [
    "D", "E402", "F811", "F841", "RUF015", "S101", "T201",
]
"*.ipynb" = ["I"]
"docs/conf.py" = ["D10"]
